build: configure generator

--- a/src/very_good_docs_site/src/pages/index.module.css
+++ b/src/very_good_docs_site/src/pages/index.module.css
@@ -11,6 +11,10 @@
   overflow: hidden;
 }
 
+.heroImage {
+  margin-top: 2em;
+}
+
 @media screen and (max-width: 996px) {
   .heroBanner {
     padding: 2rem;
